test_regress/t/t_preproc_elsif_bad.v
// DESCRIPTION: Verilator: Verilog Test module
//
// This file ONLY is placed under the Creative Commons Public Domain, for
// any use, without warranty, 2010 by Wilson Snyder.
// SPDX-License-Identifier: CC0-1.0

//See bug289

`elsif A
`endif

`else
`endif

`error `include

module t;
endmodule
